[package]
name = "shared-container"
version = "0.2.2"
edition = "2024"
authors = ["Every Day Coding Team"]
description = "A unified abstraction for shared data access in both multi-threaded and single-threaded environments"
license = "MIT"
repository = "https://github.com/edc-studio/shared-container"
keywords = ["container", "shared", "wasm", "thread-safe"]
categories = ["concurrency", "rust-patterns", "wasm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1", features = ["sync"], optional = true }

[features]
# Default features
default = ["std-sync"]

# Container implementation selection
std-sync = []
tokio-sync = ["tokio"]
wasm-sync = []

# Legacy feature for backward compatibility
force-wasm-impl = ["wasm-sync"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
