[package]
name = "shared-container"
version = "3.0.0"
edition = "2024"
authors = ["Every Day Coding Team"]
description = "A unified abstraction for shared data access in both multi-threaded and single-threaded environments"
license = "MIT"
repository = "https://github.com/edc-studio/shared-container"
keywords = ["container", "shared", "wasm", "thread-safe"]
categories = ["concurrency", "rust-patterns", "wasm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.46", features = ["sync", "rt", "rt-multi-thread"], optional = true }

[features]
# Default features
default = ["std-sync"]

# Container implementation selection (legacy)
std-sync = []
tokio-sync = ["tokio"]
wasm-sync = []

# Legacy feature for backward compatibility
force-wasm-impl = ["wasm-sync"]

# New 3.0 API
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1.46", features = ["rt-multi-thread", "sync", "macros"] }
